dr2: fix z-index and make the left side darker

--- a/webAO/styles/chatbox/chatdr2.css
+++ b/webAO/styles/chatbox/chatdr2.css
@@ -72,14 +72,14 @@
     border-top: 0.1em solid white;    
 	bottom: 0;
     right: 0;
-    background-image: linear-gradient(to right, transparent, black);
+    background-image: linear-gradient(to right, rgba(0,0,0,0.4), black);
 	position: absolute;
 	word-break: keep-all;
 	overflow-wrap: break-word;
 	text-align: left;
 	overflow: hidden;
     scroll-behavior: smooth;
-    z-index: 9;
+    z-index: 3;
 }
 
 #client_chat::before {
@@ -95,7 +95,7 @@
     height: 400%;
     top: -100%;
     left: -100%;
-    z-index: 8;
+    z-index: 2;
   }
 
 #client_inner_chat {
@@ -103,7 +103,7 @@
 	padding: 2% 4%;
 	margin: 0;
     line-height: 97%;
-    z-index: 10;
+    z-index: 4;
 }
 
 #client_chatwaiting {
